Tue Feb 01 11:17:58 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: -Wstrict-null-sentinel was added in GCC 4.0.1 so
	  doesn't work with GCC 4.0.0.  For simplicity, only enable it for
	  GCC >= 4.1.

Tue Feb  1 08:22:52 GMT 2011  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Add $set{spelling,true}.

Thu Jan 20 14:52:53 GMT 2011  Olly Betts <olly@survex.com>

	* backends/flint/flint_btreebase.cc,backends/flint/flint_btreebase.h,
	  backends/flint/flint_table.cc: Don't read the bitmaps from the base
	  files when opening a database for reading (cross-port of equivalent
	  change to chert).

Thu Jan 20 14:37:10 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
	  backends/brass/brass_table.cc: Don't read the bitmaps from the base
	  files when opening a database for reading (cross-port of equivalent
	  change to chert).

Thu Jan 20 14:21:10 GMT 2011  Olly Betts <olly@survex.com>

	* backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h,
	  backends/chert/chert_table.cc: Don't read the bitmaps from the base
	  files when opening a database for reading.

Thu Jan 20 01:57:02 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc: Optimise not to update doclength
	  when it hasn't changed (cross-port of equivalent change to chert).

Thu Jan 20 01:36:51 GMT 2011  Olly Betts <olly@survex.com>

	* backends/chert/chert_database.cc: Optimise not to update doclength
	  when it hasn't changed.

Wed Jan 19 03:50:18 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_compact.cc: Close ofstream objects used to write out stub
	  files for testing before we run the actual compaction, to avoid
	  issues on Microsoft Windows (ticket#525).

Wed Jan 19 01:01:38 GMT 2011  Olly Betts <olly@survex.com>

	* HACKING: Snapshots and releases are now bootstrapped with autoconf
	  2.68 and libtool 2.4.  Prune information about reasons for needing